crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__max_branches.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0912 Too many branches (2 > 1)
 --> too_many_branches_params.py:6:5
  |
6 | def g(x):
  |     ^
  |

PLR0912 Too many branches (2 > 1)
  --> too_many_branches_params.py:15:9
   |
15 |     def i(x):
   |         ^
   |
