crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__max_positional_args.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0917 Too many positional arguments (7/4)
 --> too_many_positional_params.py:3:5
  |
3 | def f(w, x, y, z, skip_t, skip_u, skip_v):
  |     ^
  |

PLR0917 Too many positional arguments (7/4)
 --> too_many_positional_params.py:9:5
  |
9 | def f(w, x, y, z, t, u, v):
  |     ^
  |
