crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__max_return_statements.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0911 Too many return statements (2 > 1)
 --> too_many_return_statements_params.py:1:5
  |
1 | def f(x):  # Too many return statements (2/1)
  |     ^
  |
