crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__max_statements.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0915 Too many statements (2 > 1)
 --> too_many_statements_params.py:6:5
  |
6 | def f(x):
  |     ^
  |
