crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__missing_return_doc_numpy.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
missing_return_doc.py:2:5: PLW9011 Docstring missing documentation on what is returned
  |
1 |   def return_good(a: int, b: int) -> int:
2 |       """Returns sum of two integers.
  |  _____^
3 | |     :param a: first integer
4 | |     :param b: second integer
5 | |     :return: sum of parameters a and b
6 | |     """
  | |_______^ PLW9011
7 |       return a + b
  |

missing_return_doc.py:28:5: PLW9011 Docstring missing documentation on what is returned
   |
27 |   def google_good(a: int, b: int):
28 |       """Returns sum of two integers.
   |  _____^
29 | | 
30 | |     Args:
31 | |         a: first integer
32 | |         b: second integer
33 | | 
34 | |     Returns:
35 | |         sum
36 | |     """
   | |_______^ PLW9011
37 |       return a + b
   |

missing_return_doc.py:66:5: PLW9011 Docstring missing documentation on what is returned
   |
65 |   def return_bad(a: int, b: int):  # [missing-return-doc]
66 |       """Returns sum of two integers.
   |  _____^
67 | |     :param a: first integer
68 | |     :param b: second integer
69 | |     """
   | |_______^ PLW9011
70 |       return a + b
   |


