crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__named-expr-without-context_named_expr_without_context.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLW0131 Named expression used without context
 --> named_expr_without_context.py:2:2
  |
1 | # Errors
2 | (a := 42)
  |  ^^^^^^^
3 | if True:
4 |     (b := 1)
  |

PLW0131 Named expression used without context
 --> named_expr_without_context.py:4:6
  |
2 | (a := 42)
3 | if True:
4 |     (b := 1)
  |      ^^^^^^

PLW0131 Named expression used without context
 --> named_expr_without_context.py:8:6
  |
7 | class Foo:
8 |     (c := 1)
  |      ^^^^^^
